--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -30,7 +30,7 @@ jobs:
       run: |
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --global user.name "github-actions[bot]"
-        git add dist/bundle.js dist/bookmarklet.txt
+        git add dist/bundle.js
         git commit --allow-empty -m "Build files"
     - name: Push changes
       uses: ad-m/github-push-action@master
