--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ markdown_extensions:
   - pymdownx.superfences
 
 plugins:
+  - search
   - mkdocs-video:
       css_style:
         width: "39.43vw"
