--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,7 @@ extra_javascript:
 nav:
   - Prodigy X: index.md
   - Installing: installing.md
+  - Installing On Mobile: installing-mobile.md
   - Creating Bookmarks: creating-bookmarks.md
   - Contributing:
     - Creating Hacks: contributing/creating-hacks.md
