--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,5 +53,5 @@ nav:
     - Creating Hacks: contributing/creating-hacks.md
     - Creating Alerts: contributing/alerts.md
 
-repo_url: https://github.com/ProdigyAPI/ProdigyX
-repo_name: ProdigyAPI/ProdigyX
+repo_url: https://github.com/ProdigyAPI/ProdigyXHacking
+repo_name: ProdigyAPI/ProdigyXHacking
