--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "preact": "^10.10.6",
         "react-icons": "^4.4.0",
+        "socket.io-client": "^4.5.2",
         "tw-elements": "^1.0.0-alpha12"
     },
     "devDependencies": {
