--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,8 +22,7 @@
     ],
     "ignorePatterns": [
         "node_modules",
-        "dist",
-        "src/hack.tsx"
+        "dist"
     ],
     "globals": {
         "HackFunction": true,
